syntax = "proto3"; // 版本声明，使用Protocol Buffers v3版本

option go_package = "demo/pb";  // 指定生成的Go代码在你项目中的导入路径

package pb; // 包名


// 定义服务
service Greeter {
  // SayHello 方法
  rpc GetUserInfo (GetUserRequest) returns (GetUserResponse) {}
}

// 请求消息
message GetUserRequest {
  string username = 1;
}

// 响应消息
message GetUserResponse {
  string id = 1;
  string username=2;
  string nickname=3;
}